Bug 88089 - incorrect comma in array
Summary: incorrect comma in array
Status: RESOLVED FIXED
Alias: None
Product: dbus
Classification: Unclassified
Component: core (show other bugs)
Version: git master
Hardware: Other All
: medium normal
Assignee: D-Bus Maintainers
QA Contact: D-Bus Maintainers
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-01-06 04:04 UTC by Joshua Rogers
Modified: 2015-01-06 22:48 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Joshua Rogers 2015-01-06 04:04:10 UTC
Hi,

In /dbus/dbus-marshal-validate-util.c:

121    "/foo/"
122    "foo/",

and in /dbus/dbus-marshal-recursive-util.c:

2777    "asax"
2778    "",


are incorrect, due to the missing commas.


Thanks,
Comment 1 Simon McVittie 2015-01-06 22:48:13 UTC
Well spotted. Fixed in git for 1.9.8 with the obvious change.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.