_dbus_marshal_validate_test: test both /foo/ and foo/

Bug: https://bugs.freedesktop.org/show_bug.cgi?id=88089